modified the env

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_KEY="84030b7dedae4663b0944459231704"
-NEXT_PUBLIC_API_URL="https://api.weatherapi.com/v1/forecast.json"
+NEXT_PUBLIC_API_KEY=84030b7dedae4663b0944459231704
+NEXT_PUBLIC_API_URL=https://api.weatherapi.com/v1/forecast.json
